# CorsixModStudio

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CorsixModStudio.code-workspace  LICENSE  README.md  vcpkg.json
src/cdms/: Application.cpp  Application.h  CMakeLists.txt  Common.h  Construct.cpp  Construct.h  CtrlStatusText.cpp  CtrlStatusText.h  ITool.h  MenuController.cpp  MenuController.h  ModuleManager.cpp  ModuleManager.h  TabDialog.cpp  TabDialog.h  TabManager.cpp  TabManager.h  ToolRegistry.cpp  ToolRegistry.h  Tool_AESetup.cpp  Tool_AESetup.h  Tool_AutoDPS.cpp  Tool_AutoDPS.h  Tools.cpp  Tools.h  Utility.cpp  Utility.h  config.cpp  config.h  frmCredits.cpp  frmCredits.h  frmFileSelector.cpp  frmFileSelector.h  frmFiles.cpp  frmFiles.h  frmFiles_Actions.h  frmImage.cpp  frmImage.h  frmLoading.cpp  frmLoading.h  (+36 more)
src/cdms/actions/: ActionUtil.h  CAbpAction.h  CAiAction.h  CBFXRGTDeBurnAction.h  CBfxAction.h  CBfxToLuaDumpAction.h  CDdsToRgtAction.h  CDdsViewAction.h  CExtractAction.h  CExtractFolderAction.h  CFilePathCopyAction.h  CLuaBurnAction.h  CLuaBurnFolderAction.h  CLuaBurnFolderIncReqAction.h  CLuaDumpFolder.h  CMakeCopyAction.h  CMuaAction.h  CMuaxAction.h  CNilAction.h  CNisAction.h  CRGDAction.h  CRGMMaterialAction.h  CRGODeBurnAction.h  CRgdMacroAction.h  CRgdToLuaDumpAction.h  CRgtToGenericAction.h  CRgtViewAction.h  CScanHashesAction.h  CScarAction.h  CSmfWavAction.h  CSuaAction.h  CTextViewAction.h  CTgaViewAction.h
src/cdms/async/: CProgressChannel.cpp  CProgressChannel.h  CTaskRunner.cpp  CTaskRunner.h  CWxTaskRunner.cpp  CWxTaskRunner.h  CancellationToken.h
src/cdms/common/: Application.cpp  Common.h  ITool.h  ThemeColours.cpp  ThemeColours.h  Utility.cpp  Utility.h  config.cpp  config.h  strconv.h  strings.cpp  strings.h
src/cdms/frame/: Construct.cpp  Construct.h  MenuController.cpp  MenuController.h  ModuleManager.cpp  ModuleManager.h  RelicToolResolver.cpp  RelicToolResolver.h  TabManager.cpp  TabManager.h  ToolRegistry.cpp
src/cdms/presenters/: CDpsCalculatorPresenter.cpp  CDpsCalculatorPresenter.h  CFileTreePresenter.cpp  CFileTreePresenter.h  CImagePresenter.cpp  CImagePresenter.h  CLuaInheritTreePresenter.cpp  CLuaInheritTreePresenter.h  CMassExtractPresenter.cpp  CMassExtractPresenter.h  CModuleLoadPresenter.cpp  CModuleLoadPresenter.h  CModuleSettingsPresenter.cpp  CModuleSettingsPresenter.h  CRefreshFilesPresenter.cpp  CRefreshFilesPresenter.h  CRgdEditorPresenter.cpp  CRgdEditorPresenter.h  CRgdMacroPresenter.cpp  CRgdMacroPresenter.h  CScarEditorPresenter.cpp  CScarEditorPresenter.h  CSgaMakePresenter.cpp  CSgaMakePresenter.h  CUcsEditorPresenter.cpp  CUcsEditorPresenter.h  CUcsToDatPresenter.cpp  CUcsToDatPresenter.h
src/cdms/res/: Icons.h  resource_art.h
src/cdms/services/: FileService.cpp  FileService.h  FormatService.cpp  FormatService.h  HashService.cpp  HashService.h  ModuleService.cpp  ModuleService.h  Result.h
src/cdms/tools/: Tool_AESetup.cpp  Tool_AESetup.h  Tool_AutoDPS.cpp  Tool_AutoDPS.h  Tools.cpp  Tools.h
src/cdms/views/: CHoverPopup.cpp  CHoverPopup.h  CLspStatusPanel.cpp  CLspStatusPanel.h  CtrlStatusText.h  FindBar.cpp  FindBar.h  ILuaInheritTreeView.h  IMassExtractView.h  IRgdMacroView.h  IUcsToDatView.h  ScarReferenceLoader.cpp  ScarReferenceLoader.h  ScarSyntaxConfig.cpp  ScarSyntaxConfig.h  frmCredits.cpp  frmCredits.h  frmFileSelector.cpp  frmFileSelector.h  frmFiles.cpp  frmFiles.h  frmImage.cpp  frmImage.h  frmLoading.cpp  frmLoading.h  frmLocaleSelector.cpp  frmLuaInheritTree.cpp  frmLuaInheritTree.h  frmMassExtract.cpp  frmMassExtract.h  frmMessage.cpp  frmMessage.h  frmModule.cpp  frmNewMod.cpp  frmRgdEditor.cpp  frmRgdEditor.h  frmRgdMacro.cpp  frmRgdMacro.h  (+13 more)
src/lsp/: Api.h  CMakeLists.txt  JsonRpc.cpp  JsonRpc.h  LspClient.cpp  LspClient.h  Protocol.h  ScarAnnotationTranslator.cpp  ScarAnnotationTranslator.h  Transport.cpp  Transport.h
src/rainman/: CBfxFile.cpp  CBfxFile.h  CChunkyFile.cpp  CChunkyFile.h  CCohUcsFile.h  CDoWFileView.cpp  CDoWFileView.h  CDoWModule.cpp  CDoWModule.h  CFileMap.cpp  CFileMap.h  CFileSystemStore.cpp  CFileSystemStore.h  CInheritTable.cpp  CInheritTable.h  CLuaFile.cpp  CLuaFile.h  CLuaFile2.cpp  CLuaFile2.h  CLuaFileCache.cpp  CLuaFileCache.h  CLuaFromRgd.cpp  CLuaFromRgd.h  CLuaScript.cpp  CLuaScript.h  CLuaScript_Interface.cpp  CLuaScript_Interface.h  CMakeLists.txt  CMemoryStore.cpp  CMemoryStore.h  CModuleFile.cpp  CModuleFile.h  CRgdFile.cpp  CRgdFile.h  CRgdFileMacro.cpp  CRgdFileMacro.h  CRgdHashTable.cpp  CRgdHashTable.h  CRgmFile.cpp  CRgmFile.h  (+37 more)
tests/cdms/: CMakeLists.txt  cancellationtoken_test.cpp  config_test.cpp  dpscalculatorpresenter_test.cpp  fileservice_test.cpp  filetreepresenter_test.cpp  formatservice_test.cpp  hashservice_test.cpp  imagepresenter_test.cpp  luainherittreepresenter_test.cpp  massextractpresenter_test.cpp  moduleloadpresenter_test.cpp  moduleservice_test.cpp  modulesettingspresenter_test.cpp  placeholder_test.cpp  progresschannel_test.cpp  refreshfilespresenter_test.cpp  relictoolresolver_test.cpp  result_test.cpp  rgdeditorpresenter_test.cpp  rgdmacropresenter_test.cpp  scareditorpresenter_test.cpp  sgamakepresenter_test.cpp  strconv_test.cpp  strings_test.cpp  taskrunner_test.cpp  ucseditorphresenter_test.cpp  ucstodatpresenter_test.cpp  utility_test.cpp
tests/rainman/: CMakeLists.txt  callbacks_test.cpp  cbfxfile_test.cpp  chunkyfile_test.cpp  crc32_case_idt_test.cpp  directorytraverser_test.cpp  exception_test.cpp  exceptiondeleter_test.cpp  filemap_output_test.cpp  filemap_parallel_test.cpp  filesystemstore_test.cpp  inherittable_test.cpp  internal_util_test.cpp  luafile2_test.cpp  luafile_test.cpp  luafilecache_parallel_test.cpp  luafromrgd_test.cpp  luascript_test.cpp  md5_test.cpp  memorystore_test.cpp  modulefile_test.cpp  parallel_loading_test.cpp  placeholder_test.cpp  rgdfile_test.cpp  rgdfilemacro_test.cpp  rgdhashtable_test.cpp  rgmfile_test.cpp  rgtfile_test.cpp  sgacreator_test.cpp  sgafile_test.cpp  test_main.cpp  threadpool_test.cpp  ucsfile_test.cpp  writetime_test.cpp
(+154 files in other folders)
